{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 18,
  "lineage": "43e6f28d-fe3a-30c4-37a1-0375799d3fc1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_from_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-14T05:53:48.019-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-4linux-cka/global/firewalls/allow-access-from-iap",
            "log_config": [],
            "name": "allow-access-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "priority": 1000,
            "project": "lab-4linux-cka",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/firewalls/allow-access-from-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-11-14T05:53:47.314-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-4linux-cka/global/firewalls/allow-default",
            "log_config": [],
            "name": "allow-default",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "priority": 1000,
            "project": "lab-4linux-cka",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/firewalls/allow-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-11-14T05:53:47.347-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-4linux-cka/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "priority": 65534,
            "project": "lab-4linux-cka",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/firewalls/allow-internal",
            "source_ranges": [
              "172.16.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tjba",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-11-14T07:27:25.122-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lab-4linux-cka/global/firewalls/allow-tjba",
            "log_config": [],
            "name": "allow-tjba",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "priority": 1000,
            "project": "lab-4linux-cka",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/firewalls/allow-tjba",
            "source_ranges": [
              "168.228.243.22/32",
              "168.228.243.29/32",
              "191.178.108.46/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kube_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/zones/southamerica-east1-c/disks/kube-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lab-4linux-cka/zones/southamerica-east1-c/instances/kube-master",
            "instance_id": "2341294668861287945",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "VO1-apAs4do=",
            "name": "kube-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.151.198.8",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
                "network_ip": "172.16.1.100",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/regions/southamerica-east1/subnetworks/cka-4linux-br",
                "subnetwork_project": "lab-4linux-cka"
              }
            ],
            "project": "lab-4linux-cka",
            "resource_policies": [
              "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/regions/southamerica-east1/resourcePolicies/gce-policy"
            ],
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/zones/southamerica-east1-c/instances/kube-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "southamerica-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_resource_policy.daily",
            "google_compute_subnetwork.subnet_sp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/lab-4linux-cka/global/networks/cka-4linux",
            "mtu": 0,
            "name": "cka-4linux",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "lab-4linux-cka",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-11-14T05:54:13.440-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/lab-4linux-cka/regions/southamerica-east1/routers/cka-4linux--router",
            "name": "cka-4linux--router",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "project": "lab-4linux-cka",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/regions/southamerica-east1/routers/cka-4linux--router"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_sp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "lab-4linux-cka/southamerica-east1/cka-4linux--router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "lab-4linux-cka",
            "region": "southamerica-east1",
            "router": "cka-4linux--router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.subnet_sp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-14T05:53:49.739-08:00",
            "gateway_address": "172.16.1.1",
            "id": "projects/lab-4linux-cka/regions/southamerica-east1/subnetworks/cka-4linux-br",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "cka-4linux-br",
            "network": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/global/networks/cka-4linux",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lab-4linux-cka",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lab-4linux-cka/regions/southamerica-east1/subnetworks/cka-4linux-br",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}